# StockInsightTracker

./: .gitignore  .gitmessage  .replit  README.md  main.py  pyproject.toml  setup-branch-protection.sh  test_main.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pr-checks.yml  test.yml
repl_nix_stockinsighttracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: fetch_aapl_data.py
tests/: test_cache.py  test_calculations.py  test_islamic_screening.py  test_main.py  test_stock_data.py
utils/: cache.py  calculations.py  islamic_screening.py  stock_data.py
